--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </form>
     <div class="chart-container">
       <div id="chart"></div>
+      <p class="chart-legend">Os números horizontais representam anos de vida.</p>
     </div>
   </div>
   <script src="script.js"></script>
