--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Sua Vida em Perspectiva</h1>
+    <h1>Sua Vida em Semanas</h1>
     <form id="dob-form">
       <label for="dob">Data de Nascimento:</label>
       <input type="date" id="dob" required />
